config/k8s/drone-ci-demo.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-secrets
  namespace: default
  labels:
    app: drone-secrets
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone-secrets
  template:
    metadata:
      labels:
        app: drone-secrets
    spec:
      containers:
        - name: drone-secrets
          image: drone/kubernetes-secrets
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
      restartPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: drone-secrets-service
  namespace: default
spec:
  selector:
    app: drone-secrets
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: http

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-server
  namespace: default
  labels:
    app: drone-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone-server
  template:
    metadata:
      labels:
        app: drone-server
    spec:
      containers:
        - name: drone-server
          image: drone/drone:1.0.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
          volumeMounts:
            - name: drone-pvc
              mountPath: "/drone"
      volumes:
        - name: drone-pvc
          persistentVolumeClaim:
            claimName: drone-pvc
      restartPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: drone-server-service
  namespace: default
spec:
  selector:
    app: drone-server
  ports:
    - protocol: TCP
      port: 80
      name: http

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: drone-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
spec:
  rules:
    - host: arthasdragon.com
      http:
        paths:
          - path: /
            backend:
              serviceName: drone-server-service
              servicePort: 80
